--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -29,14 +29,9 @@
   padding-left: 20px;
 }
 
-.carousel-slide:hover {
-  /* transform: scale(1.008); */
-  transition: transform 0.5s ease, box-shadow 0.5s ease;
-  /* box-shadow: 5px 0 15px 0 rgba(141, 142, 157, 0.2); */
-}
-
-/* Slide content */
-.slide-content {
+/* Slide content with smooth scaling animation */
+.slide-content,
+.glass-card {
   width: 95vw;
   position: relative;
   overflow: hidden;
@@ -44,19 +39,16 @@
   transition: transform 0.5s ease, box-shadow 0.5s ease;
 }
 
-.slide-content::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  border-radius: 15px;
-  /* z-index: 0; */
+.slide-content:hover,
+.glass-card:hover {
+  /* transform: scale(1.005);  */
+  box-shadow: 5px 0 15px 0 rgba(141, 142, 157, 0.2); /* Add shadow effect */
 }
 
+/* Overlay and background for slide content */
+.slide-content::before,
 .overlay {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -89,7 +81,7 @@
   box-shadow: 5px 0 15px 2px rgba(141, 142, 157, 0.1);
   width: 100%;
   max-width: 95vw;
-  min-height: 500px;
+  min-height: 35vw;
   margin: auto;
   padding: 20px;
   display: flex;
@@ -100,8 +92,8 @@
 }
 
 .glass-card:hover {
-  /* transform: scale(1.008); */
-  /* box-shadow: 5px 0 15px 0 rgba(141, 142, 157, 0.2); */
+  transform: scale(1.005); /* Enlarge the card smoothly */
+  box-shadow: 5px 0 15px 0 rgba(141, 142, 157, 0.2); /* Add shadow on hover */
 }
 
 /* Custom Button */
@@ -139,26 +131,42 @@
 /* Navigation Buttons */
 .carousel-button {
   position: absolute;
-  top: 50%;
+  top: 45%;
   transform: translateY(-50%);
   background-color: rgba(0, 0, 0, 0.5);
   color: #fff;
   border: none;
-  padding: 10px;
+  padding: 10px 20px;
   cursor: pointer;
   border-radius: 50%;
+  opacity: 0;
+  transform: scale(0.9);
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+/* Show the button when hovered */
+.carousel-button.show {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .carousel-button.prev {
-  left: 10px;
+  left: 60px;
 }
 
 .carousel-button.next {
-  right: 10px;
+  right: 60px;
 }
 
+/* Button hover state - background changes to light gray */
 .carousel-button:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: lightgray;
+  color: black;
+}
+
+/* Carousel button hover */
+.carousel-button.show:hover {
+  background-color: lightgray;
 }
 
 body {
