--- a/src/components/StatsSource/StatsSource.css
+++ b/src/components/StatsSource/StatsSource.css
@@ -24,7 +24,7 @@
   border: none;
   background-color: #6366f1;
   color: white;
-  padding: 8px;
+  padding: 8px 12px;
   border-radius: 25px;
   font-size: 14px;
   font-weight: medium;
